--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
           <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/deny.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Deny Dwi Ferdiyansah</h4>
                 <span>CTO</span>
