--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/hero-img.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -88,9 +88,9 @@
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Bringing Your Ideas To Life</h1>
           <h2>We are team of talented designers making Animation</h2>
-          <div class="d-flex justify-content-center justify-content-lg-start">
+          <div class="d-flex justify-content-center justify-content-lg-center">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -479,10 +479,10 @@
                 <span>Chief Executive Officer</span>
                 <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
                 <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                  <!-- <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a> -->
+                  <a href="https://www.instagram.com/bayuanantasurya/" target="_blank"><i class="ri-instagram-fill"></i></a>
+                  <!-- <a href=""> <i class="ri-linkedin-box-fill"></i> </a> -->
                 </div>
               </div>
             </div>
@@ -496,10 +496,10 @@
                 <span>CFO</span>
                 <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
                 <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                  <!-- <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a> -->
+                  <a href="https://www.instagram.com/yud_ayana/" target="_blank"><i class="ri-instagram-fill"></i></a>
+                  <!-- <a href=""> <i class="ri-linkedin-box-fill"></i> </a> -->
                 </div>
               </div>
             </div>
@@ -513,10 +513,10 @@
                 <span>CTO</span>
                 <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
                 <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                  <!-- <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a> -->
+                  <a href="https://www.instagram.com/denydwifz/" target="_blank"><i class="ri-instagram-fill"></i></a>
+                  <!-- <a href=""> <i class="ri-linkedin-box-fill"></i> </a> -->
                 </div>
               </div>
             </div>
@@ -530,10 +530,10 @@
                 <span>CTO</span>
                 <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
                 <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                  <!-- <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a> -->
+                  <a href="https://www.instagram.com/puturyandarmayasa/" target="_blank"><i class="ri-instagram-fill"></i></a>
+                  <!-- <a href=""> <i class="ri-linkedin-box-fill"></i> </a> -->
                 </div>
               </div>
             </div>
@@ -765,13 +765,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Arsha</h3>
+            <h3>Bard Animation</h3>
             <p>
-              Bard Animation <br>
+              <!-- s -->
               Singaraja, Bali<br>
               Indonesia <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> +62 877-6281-0011<br>
+              <strong>Email:</strong> bardanimation@gmail.com<br>
             </p>
           </div>
 
