--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Bard Animation</span></strong>. All Rights Reserved
+        &2023; Copyright <strong><span>Bard Animation</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
